removed accordion and replaced with tabbable panes of local content

--- a/case-studies.html
+++ b/case-studies.html
@@ -63,18 +63,19 @@
 <div class="row">
   <div class="col-4">
     <div class="list-group" id="list-tab" role="tablist">
-      <a class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">2019 - Review of community engagement - City of Nedlands</a>
-      <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">2018 - Home based aged care packages in the Mid West region of Western Australia: Access by Aboriginal People – A Snapshot</a>
-      <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">2012 - Infrastructure– Community engagement review</a>
-      <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">2012 Town of Brookton WA and Baptistcare – Aged care contract review</a>
+      <a class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">2019 &ndash; Review of community engagement - City of Nedlands</a>
+      <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">2018 &ndash; Home based aged care packages in the Mid West region of Western Australia: Access by Aboriginal People – A Snapshot</a>
+      <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">2012 &ndash; Infrastructure– Community engagement review</a>
+      <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">2012 &ndash; Town of Brookton WA and Baptistcare – Aged care contract review</a>
     </div>
   </div>
   <div class="col-8">
     <div class="tab-content" id="nav-tabContent">
-      <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">            <h5 class="card-title">Review of community engagement - City of Nedlands</h5>
+      <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">            <h5 class="card-title">2019 &ndash; Review of community engagement - City of Nedlands</h5>
             <p>Following similar work in 2016 for the City of Melville, in 2019 Helen Grzyb and Associates were appointed by the City of Nedlands to undertake an independent review of its public participation activities.</p>
             <a href="https://www.melvillecity.com.au/things-to-do/find-venues-parks-and-reserves/shirley-strickland-reserve"><img class="h-25 d-inline-block" src="img/Shirely-Strickland-Reserve.jpg" alt="Shirley Strickland reserve playground"></a>
             <figcaption class="text-muted">Image source: https://www.melvillecity.com.au/things-to-do/find-venues-parks-and-reserves/shirley-strickland-reserve</figcaption>
+            <br>
             <p>As well as reviewing the City’s community engagement, the review also assessed the City of Nedlands’ compliance with the Disability Services Regulations (2004) - public participation.</p>
             <p>The review tools used were the International Association of Public Participation Quality Standard and the Disability Services Regulations (2004) public participation checklist.</p>
             <p>The results of the review were positive, reinforcing the City’s engagement processes and its provisions for information, engagement and consideration in decision-making. Improvements were identified which could continue to reinforce and enhance the robust community engagement ethos and practices undertaken by the City including accessibility for people with a disability.</p>
@@ -82,7 +83,7 @@
             <img src="img/nedlands.png" alt="6009 sign in Nedlands, WA">
             <figcaption class="text-muted">Image source: https://www.nedlands.wa.gov.au</figcaption>
          </div>
-      <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list"><h5 class="card-title">2018 –Home based aged care packages – A snapshot for Geraldton Regional Aboriginal Medical Service Inc</h5>
+      <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list"><h5 class="card-title">2018 &ndash; Home based aged care packages &ndash; A snapshot for Geraldton Regional Aboriginal Medical Service Inc</h5>
                 <p>Key staff from Geraldton Regional Aboriginal Medical Service (GRAMS) and WA Country Health Service (WACHS) Mid West recognised that there were possible gaps in Aboriginal people having access to home based aged care packages in their region. </p>
                 <p>As a result, the WA Primary Health Alliance funded Helen Grzyb and Associates to undertake a snapshot picture about the reality for Aboriginal people in the three localities in the region; and about people’s access to home based aged care packages.</p>
                 <p>The project was hosted by GRAMS and supported by a project advisory committee comprising staff from GRAMS, WACHS (Mid West), Aboriginal Health Council of Western Australia (AHCWA), Bethanie, Carnarvon Medical Service Aboriginal Corporation (CMSAC).</p>
@@ -114,7 +115,9 @@
                     </ul>
 
                     <p>Helen Grzyb and Associates is currently a member of MRWA's contractor panel.</p></div>
-      <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">   <p>Helen Grzyb and Associates were appointed to undertake a review of Baptistcare's contract with the Town of Brookton for management of the Kalkarni Aged Care facility.</p>
+      <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">
+        <h5 class="card-title">2012 &ndash; Town of Brookton WA and Baptistcare &ndash; Aged care contract review</h5>
+<p>Helen Grzyb and Associates were appointed to undertake a review of Baptistcare's contract with the Town of Brookton for management of the Kalkarni Aged Care facility.</p>
                    <p>The work involved reviewing documentation including contracts and financial reports, undertaking workshops and meeting with key stakeholders of the residential aged care service as well as the adjacent medical service.</p>
                    <p>As a result of this work the contract negotiations between the two parties progressed and an updated contract was agreed which recognised the current operating and policy environment for residential aged care in regional Western Australia; the quality requirements for residential aged care services; the differing needs well as the commonalities of interest between Baptistcare and the Town of Brookton.</p>
                    <p>Reflecting the changing policy and financial environment for residential aged care, in 2019, Baptistcare took over the service from the Town of Brookton.</p>
@@ -125,112 +128,6 @@
     </div>
   </div>
 </div>
-<!-- 
-
-      <div class="accordion" id="accordionExample">
-        <div class="card">
-          <div class="card-header" id="headingOne">
-            <h2 class="mb-0">
-              <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-               2019 - Review of community engagement - City of Nedlands
-            </h2>
-          </div>
-
-        <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
-          <div class="card-body">   
-            <h5 class="card-title">Review of community engagement - City of Nedlands</h5>
-            <p>Following similar work in 2016 for the City of Melville, in 2019 Helen Grzyb and Associates were appointed by the City of Nedlands to undertake an independent review of its public participation activities.</p>
-            <a href="https://www.melvillecity.com.au/things-to-do/find-venues-parks-and-reserves/shirley-strickland-reserve"><img class="h-25 d-inline-block" src="img/Shirely-Strickland-Reserve.jpg" alt="Shirley Strickland reserve playground"></a>
-            <figcaption class="text-muted">Image source: https://www.melvillecity.com.au/things-to-do/find-venues-parks-and-reserves/shirley-strickland-reserve</figcaption>
-            <p>As well as reviewing the City’s community engagement, the review also assessed the City of Nedlands’ compliance with the Disability Services Regulations (2004) - public participation.</p>
-            <p>The review tools used were the International Association of Public Participation Quality Standard and the Disability Services Regulations (2004) public participation checklist.</p>
-            <p>The results of the review were positive, reinforcing the City’s engagement processes and its provisions for information, engagement and consideration in decision-making. Improvements were identified which could continue to reinforce and enhance the robust community engagement ethos and practices undertaken by the City including accessibility for people with a disability.</p>
-
-            <img src="img/nedlands.png" alt="6009 sign in Nedlands, WA">
-            <figcaption class="text-muted">Image source: https://www.nedlands.wa.gov.au</figcaption>
-           </div>
-        </div>
-
-        <div class="card">
-          <div class="card-header" id="headingTwo">
-              <h2 class="mb-0">
-              <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">2018 - Home based aged care packages in the Mid West region of Western Australia: Access by Aboriginal People – A Snapshot
- </button>
-              </h2>
-          </div>
-
-          <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-            <div class="card-body">
-                <h5 class="card-title">2018 –Home based aged care packages – A snapshot for Geraldton Regional Aboriginal Medical Service Inc</h5>
-                <p>Key staff from Geraldton Regional Aboriginal Medical Service (GRAMS) and WA Country Health Service (WACHS) Mid West recognised that there were possible gaps in Aboriginal people having access to home based aged care packages in their region. </p>
-                <p>As a result, the WA Primary Health Alliance funded Helen Grzyb and Associates to undertake a snapshot picture about the reality for Aboriginal people in the three localities in the region; and about people’s access to home based aged care packages.</p>
-                <p>The project was hosted by GRAMS and supported by a project advisory committee comprising staff from GRAMS, WACHS (Mid West), Aboriginal Health Council of Western Australia (AHCWA), Bethanie, Carnarvon Medical Service Aboriginal Corporation (CMSAC).</p>
-                <p>There was significant buy in from a diverse range of stakeholders. People in government and in the community across the region wanted to work out how best to make a difference for those older Aboriginal people who are eligible but currently outside the home-based aged care system.</p>
-                <p>A key construct resulting from the project was the need for a service model which ensures clients are culturally safe – it was seen that this will shift existing resistance by people to being engaged in the aged care system.</p>
-                <p>As a result of the 2018 project, a trial was established for a centre-based service for people in the Geraldton local community. If successful, this trial could lead the way to significantly change access to home-based services, thus making a positive impact on the quality of life for people in the Mid West region.</p>
-                <img class="w-50 p-3" src="img/GRAMS-map.jpg" alt="Midwest Health Region and ARIA+ 2011">
-                <figcaption class="text-muted">Source: DoH, Epidemiology GIS Branch 2015</figcaption> 
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="card"> 
-              <div class="card-header" id="headingThree">
-                <h2 class="mb-0">
-                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">2012 - Infrastructure– Community engagement review</button>
-                </h2>
-              </div>
-              <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-                <div class="card-body">
-                    <h5 class="card-title">2012 - Infrastructure– Community engagement review</h5>
-
-                    <a href="https://www.bgeeng.com/sc-traffic-design/40-market-sectors/ms-transport/mst-traffic-design/329-gateway-vision-wa?tmpl=component">
-                    <img class="w-50 p-3" src="img/gateway.jpg" alt="Gateway highway aerial photo">
-                    </a>
-                    <figcaption class="text-left text-muted">Image source: https://www.bgeeng.com/sc-traffic-design/40-market-sectors/ms-transport/mst-traffic-design/329-gateway-vision-wa?tmpl=component </figcaption>  
-                    <p>Dr Helen Grzyb was part of the 2006 inaugural Main Roads WA (MRWA) Value Assurance Review team. This work tested the first Value Assurance Review (VAR) of MRWA stakeholder engagement. As a result of this work, Helen is an accredited Reviewer. Subsequently Helen went on to undertake a further five reviews for community engagement on MRWA projects:</p>
-
-                    <ul>
-                        <li>Albany Ring Road project</li>
-                        <li>City East Alliance project</li>
-                        <li>Gateway Vision project</li>
-                        <li>Mitchell Freeway Extension project</li>
-                    </ul>
-
-                    <p>As a highly experienced Value Assurance Reviewer we utilised the MRWA framework and have adapted the review techniques to extend and improve the framework to include:</p>
-
-                    <ul>
-                        <li>Real time evaluation</li>
-                        <li>Independent review statement as part of the project business case</li>
-                    </ul>
-
-                    <p>Helen Grzyb and Associates is currently a member of MRWA's contractor panel.</p>
-                 </div>
-              </div>
-            </div>
-
-              <div class="card">
-              <div class="card-header" id="headingFour">
-                <h2 class="mb-0">
-                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">2012 Town of Brookton WA and Baptistcare – Aged care contract review</button>
-                </h2>
-              </div>
-              <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
-                <div class="card-body">
-                   <p>Helen Grzyb and Associates were appointed to undertake a review of Baptistcare's contract with the Town of Brookton for management of the Kalkarni Aged Care facility.</p>
-                   <p>The work involved reviewing documentation including contracts and financial reports, undertaking workshops and meeting with key stakeholders of the residential aged care service as well as the adjacent medical service.</p>
-                   <p>As a result of this work the contract negotiations between the two parties progressed and an updated contract was agreed which recognised the current operating and policy environment for residential aged care in regional Western Australia; the quality requirements for residential aged care services; the differing needs well as the commonalities of interest between Baptistcare and the Town of Brookton.</p>
-                   <p>Reflecting the changing policy and financial environment for residential aged care, in 2019, Baptistcare took over the service from the Town of Brookton.</p>
-                   <figure>
-                   <a href="https://www.baptistcare.com.au/residential-care/facilities/kalkarni-residency/"><img class="w-50 p-3" src="img/Kalkarni.png" alt="Kalkarni Aged Care facility"></a>
-                   <figcaption class="text-muted">Image source: https://www.baptistcare.com.au/residential-care/facilities/kalkarni-residency/</figcaption>
-                 </figure>
-                  </div>
-              </div>
-            </div>
-          </div>
-         -->
 
       </main>
       <div class="jumbotron" id="contact">
