harmonised jumbotron code in all pages

--- a/expertise.html
+++ b/expertise.html
@@ -124,16 +124,12 @@
             <p>As executive coach, Helen has a very effective approach in gaining people's trust, teasing out barriers to adoption of change and new approaches, and is experienced in coaching people from government or not for profit organisations. Successful coaching assignments have covered sectors such as:<br>The West Australian public sector (Treasury, Small business, Justice)</p>           
         </div>
 
-      
     </main>
-      <div class="jumbotron" id="contact">
-            <h2>Ready to get in touch?</h2><br>
-            <a href="contact.html" class="btn btn-primary">Send message</a>
-
-            <a href="mailto:contact@helengrzyb.com.au" class="btn btn-primary">Direct email</a><br> 
+     <div class="jumbotron" id="contact">
+                  <h2>Ready to get in touch?</h2><br>
+                  <a href="contact.html" class="btn btn-primary">Drop us a line</a>
       </div>
 
- 
       <footer>
           <ul class="list-inline">
             <li class="list-inline-item"><a href="https://www.linkedin.com/in/helengrzyb/"><i class="fab fa-linkedin"></i></a></li>
