--- a/previous-clients.html
+++ b/previous-clients.html
@@ -194,7 +194,7 @@
       <footer>
           <ul class="list-inline">
             <li class="list-inline-item"><a href="https://www.linkedin.com/in/helengrzyb/"><i class="fab fa-linkedin"></i></a></li>
-            <li class="list-inline-item"><a href="#"><i class="fab fa-facebook"></i></a></li>
+            <li class="list-inline-item"><a href="https://www.facebook.com/Helen-Grzyb-and-Associates-106455867726934/"><i class="fab fa-facebook"></i></a></li>
           </ul>
       </footer>
 
