further edits done by Helen on website updated in local code

--- a/index.html
+++ b/index.html
@@ -67,9 +67,7 @@
         <p class="lead">Helen Grzyb and Associates is a unique consultancy offering sustainable solutions to community and government organisations since 1997.</p>
 
         <h5><strong>Solutions</strong></h5>
-
         <p>Helen Grzyb and Associates works with government and not for profit organisations to achieve the best possible value in an environment of change.</p>
-
         <p>We are perfectly positioned to work with you to plan and develop the strategies for contemporary service delivery. We offer expertise in:</p>
       </div>
 
@@ -77,15 +75,13 @@
       <div class="col-xs-12 col-sm-6 col-md-3">
       <div class="card green-top"><img alt="website icon" src="./img/target-1.svg" width="100">
       <h2>Research and policy review</h2>
-
-      <p>Helen can conduct independent reviews and evaluations of policies/programs<strong>.</strong>&nbsp;</p>
+      <p>Helen can conduct independent reviews and evaluations of policies/programs.</p>
       </div>
       </div>
 
       <div class="col-xs-12 col-sm-6 col-md-3">
       <div class="card green-top"><img alt="speech bubbles" src="./img/light-bulb.svg" width="100">
       <h2>Strategic planning</h2>
-
       <p>We develop strategic and business plans for organisations seeking to position themselves optimally in the future.</p>
       </div>
       </div>
@@ -93,23 +89,21 @@
       <div class="col-xs-12 col-sm-6 col-md-3">
       <div class="card green-top"><img alt="speech bubbles" src="./img/teamwork-4.svg" width="100">
       <h2>Stakeholder engagement</h2>
-      <p>With recognised expertise in stakeholder engagement throughout WA, we also provide engagement reviews to identify improvements in this key organisational process.&nbsp;</p>
+      <p>With recognised expertise in stakeholder engagement throughout WA, we also provide engagement reviews to identify improvements in this key organisational process. </p>
       </div>
       </div>
 
       <div class="col-xs-12 col-sm-6 col-md-3">
       <div class="card green-top"><img alt="earth icon" src="./img/working.svg" width="100">
       <h2>Governance advisory</h2>
-
-      <p>We work with boards to optimise policies for the future, identify board skills and capacity requirements, manage risk, build sustainable plans and organisations.</p>
+      <p>We work with boards to optimise policies for the future, identify board skills and capacity requirements, manage risk, build sustainable plans and organisations. </p>
       </div>
       </div>
 
       <div class="col-xs-12 col-sm-6 col-md-3">
       <div class="card green-top"><img alt="speech bubbles" src="./img/shake-hands.svg" width="100">
       <h2>Executive coaching</h2>
-
-      <p>As executive coach, Helen has a very effective approach in gaining people's trust, teasing out barriers to adoption of change and new approaches, and is experienced in coaching people from government or not for profit organisations.</p>
+      <p>As executive coach, Helen has a very effective approach in gaining people's trust, teasing out barriers to adoption of change and new approaches, and is experienced in coaching people in government or not for profit organisations.</p>
             </div>
           </div>
         </div>
