--- a/previous-clients.html
+++ b/previous-clients.html
@@ -62,9 +62,8 @@
       </div>
     </nav>
     <main>
-        <div class="cushycms"><h3>Clients</h3>
-
-        <p>Since 1997, <strong>Helen Grzyb and Associates</strong> have worked with an extensive group of clients in government, not for profit and industry sectors. We have successfully completed projects for diverse clients:</p>
+        <div class="cushycms">
+               <p>Since 1997, <strong>Helen Grzyb and Associates</strong> have worked with an extensive group of clients in government, not for profit and industry sectors. We have successfully completed projects for diverse clients:</p>
         <strong>Public Sector</strong>
 
         <ul>
@@ -183,7 +182,6 @@
             </ul>
             </div>
 
-       
     </main>
      <div class="jumbotron" id="contact">
                   <h2>Ready to get in touch?</h2><br>
