--- a/about.html
+++ b/about.html
@@ -18,10 +18,6 @@
 </header>
 
 <body>  
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
-
     <nav class="navbar sticky-top navbar-expand-sm navbar-dark bg-dark">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -85,15 +81,17 @@
                   <h2>Ready to get in touch?</h2><br>
                   <a href="contact.html" class="btn btn-primary">Drop us a line</a>
       </div>
-
+   
+     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
        
-      <footer>
-          <ul class="list-inline">
-            <li class="list-inline-item"><a href="https://www.linkedin.com/in/helengrzyb/"><i class="fab fa-linkedin"></i></a></li>
-            <li class="list-inline-item"><a href="https://www.facebook.com/Helen-Grzyb-and-Associates-106455867726934/"><i class="fab fa-facebook"></i></a></li>
-          </ul>
-      </footer>
-
-      
     </body>
+
+    <footer>
+        <ul class="list-inline">
+          <li class="list-inline-item"><a href="https://www.linkedin.com/in/helengrzyb/"><i class="fab fa-linkedin"></i></a></li>
+          <li class="list-inline-item"><a href="https://www.facebook.com/Helen-Grzyb-and-Associates-106455867726934/"><i class="fab fa-facebook"></i></a></li>
+        </ul>
+    </footer>
 </html>
