--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <a class="nav-link" href="index.html#news">News</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html#contact">Contact</a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
               </ul>
           <ul class="navbar-nav">
