changes to footer to add flex layout, icons displayed left, text center, and ackowledgement right

--- a/index.html
+++ b/index.html
@@ -145,12 +145,15 @@
 
 </body>
 
-
       <footer>
-          <ul class="list-inline">
-            <li class="list-inline-item"><a href="https://www.linkedin.com/in/helengrzyb/"><i class="fab fa-linkedin"></i></a></li>
-            <li class="list-inline-item"><a href="https://www.facebook.com/Helen-Grzyb-and-Associates-106455867726934/"><i class="fab fa-facebook"></i></a></li>
-          </ul>
+          <div class="d-flex">
+            <div class="mr-auto p-2 bd-highlight">
+              <li class="list-inline-item"><a href="https://www.linkedin.com/in/helengrzyb/"><i class="fab fa-linkedin"></i></a></li>
+              <li class="list-inline-item"><a href="https://www.facebook.com/Helen-Grzyb-and-Associates-106455867726934/"><i class="fab fa-facebook"></i></a></li>
+            </div>
+            <div class="p-2 bd-highlight">contact@helengrzyb.com.au</div>
+            <div class="ml-auto p-2 bd-highlight">Developed by Robert Paul</div>
+          </div>
       </footer>
 
 
