Added new footer code to each page. Added cushycms class to jumbotrons and footer on all pages.

--- a/case-studies.html
+++ b/case-studies.html
@@ -12,7 +12,7 @@
 </head>
 
 <header>
-    <a href="index.html"> <img id="logo" src="logo.png"></a>
+    <a href="index.html"> <img class="img-fluid" id="logo" src="logo.png"></a>
 </header>
 
 <body>
@@ -130,7 +130,7 @@
 </div>
 
   </main>
-  <div class="jumbotron" id="contact">
+  <div class="jumbotron cushycms" id="contact">
                   <h2>Ready to get in touch?</h2><br>
                   <a href="contact.html" class="btn btn-primary">Drop us a line</a>
   </div>
@@ -141,9 +141,13 @@
 
   </body>
   <footer>
-    <ul class="list-inline">
-      <li class="list-inline-item"><a href="https://www.linkedin.com/in/helengrzyb/"><i class="fab fa-linkedin"></i></a></li>
-      <li class="list-inline-item"><a href="https://www.facebook.com/Helen-Grzyb-and-Associates-106455867726934/"><i class="fab fa-facebook"></i></a></li>
-    </ul>
-  </footer>
+          <div class="d-flex cushycms">
+            <div class="mr-auto p-2 bd-highlight">
+              <li class="list-inline-item"><a href="https://www.linkedin.com/in/helengrzyb/"><i class="fab fa-linkedin"></i></a></li>
+              <li class="list-inline-item"><a href="https://www.facebook.com/Helen-Grzyb-and-Associates-106455867726934/"><i class="fab fa-facebook"></i></a></li>
+            </div>
+            <div class="p-2 bd-highlight">contact@helengrzyb.com.au</div>
+            <div class="ml-auto p-2 bd-highlight">Developed by Robert Paul</div>
+          </div>
+      </footer>
 </html>
