--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 </head>
 
 <header>
-    <a href="index.html"> <img id="logo" src="logo.png"></a>
+    <a href="index.html"> <img class="img-fluid" id="logo" src="logo.png"></a>
 </header>
 
 <body>
@@ -66,13 +66,14 @@
 
 </body>
 
-    
-      <footer>
-          <ul class="list-inline">
-            <li class="list-inline-item"><a href="https://www.linkedin.com/in/helengrzyb/"><i class="fab fa-linkedin"></i></a></li>
-            <li class="list-inline-item"><a href="https://www.facebook.com/Helen-Grzyb-and-Associates-106455867726934/"><i class="fab fa-facebook"></i></a></li>
-          </ul>
+  <footer>
+          <div class="d-flex cushycms">
+            <div class="mr-auto p-2 bd-highlight">
+              <li class="list-inline-item"><a href="https://www.linkedin.com/in/helengrzyb/"><i class="fab fa-linkedin"></i></a></li>
+              <li class="list-inline-item"><a href="https://www.facebook.com/Helen-Grzyb-and-Associates-106455867726934/"><i class="fab fa-facebook"></i></a></li>
+            </div>
+            <div class="p-2 bd-highlight">contact@helengrzyb.com.au</div>
+            <div class="ml-auto p-2 bd-highlight">Developed by Robert Paul</div>
+          </div>
       </footer>
-
-
 </html>
