--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <header>
-    <a href="index.html"> <img id="logo" src="logo.png"></a>
+    <a href="index.html"> <img class="img-fluid" id="logo" src="logo.png"></a>
 </header>
 
 <body>
@@ -106,34 +106,37 @@
         </div>
       </div>
 
-      <div id="news" class="cushycms"><h3>News</h3>
+            <div id="news" class="cushycms"><h3>News</h3>
 
-      <h5 class="date">February 14, 2020</h5>
+              <h5 class="date">February 14, 2020</h5>
 
-      <h4>Workshops at As We Are</h4>
+              <h4>Workshops at As We Are</h4>
 
-      <ul>
-        <li>We are facilitating strategic plan workshops this coming week for As We Are, an arts/disability program that is part of the Nulson Group.</li>
-      </ul>
+              <ul>
+                <li>We are facilitating strategic plan workshops this coming week for As We Are, an arts/disability program that is part of the Nulsen Group.</li>
+              </ul>
 
-      <h5 class="date">July 3, 2019</h5>
+              <h5 class="date">July 3, 2019</h5>
 
-      <h4>New board role</h4>
+              <h4>New board role</h4>
 
-      <ul>
-        <li>Governing Council Member for South Regional TAFE</li>
-      </ul>
+              <ul>
+                <li>Governing Council Member for South Regional TAFE</li>
+              </ul>
 
-      <h4>Current panel contracts</h4>
+              <h5 class="date">April 2020</h5>
 
-      <ul>
-        <li>Approved provider for the provision of stakeholder and community engagement services for Main Roads Western Australia</li>
-        <li>Approved provider for the provision of stakeholder engagement reviews for the Department of Primary Industries and Regional Development</li>
-        <li>Approved provider for the supply of policy and research services: Commissioner for Children and Young People.</li>
-      </ul>
-      </div>
+              <h4>Current panel contracts</h4>
+
+              <ul>
+                <li>Approved provider for the provision of stakeholder and community engagement services for Main Roads Western Australia</li>
+                <li>Approved provider for the provision of stakeholder engagement reviews for the Department of Primary Industries and Regional Development</li>
+                <li>Approved provider for the supply of policy and research services: Commissioner for Children and Young People.</li>
+              </ul>
+              </div>
+
     </main>  
-      <div class="jumbotron" id="contact">
+      <div class="jumbotron cushycms" id="contact">
                   <h2>Ready to get in touch?</h2><br>
                   <a href="contact.html" class="btn btn-primary">Drop us a line</a>
 
@@ -146,7 +149,7 @@
 </body>
 
       <footer>
-          <div class="d-flex">
+          <div class="d-flex cushycms">
             <div class="mr-auto p-2 bd-highlight">
               <li class="list-inline-item"><a href="https://www.linkedin.com/in/helengrzyb/"><i class="fab fa-linkedin"></i></a></li>
               <li class="list-inline-item"><a href="https://www.facebook.com/Helen-Grzyb-and-Associates-106455867726934/"><i class="fab fa-facebook"></i></a></li>
@@ -155,6 +158,4 @@
             <div class="ml-auto p-2 bd-highlight">Developed by Robert Paul</div>
           </div>
       </footer>
-
-
 </html>
