--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 </head>
 
 <header>
-    <a href="index.html"> <img id="logo" src="logo.png"></a>
+    <a href="index.html"> <img class="img-fluid" id="logo" src="logo.png"></a>
 </header>
 
 <body>  
@@ -59,25 +59,28 @@
     </nav>
 
   <main>
-        <div id="about" class="cushycms">
-            <h3>About Dr Helen Grzyb</h3>
+         <div id="about" class="cushycms"><h3>About Dr Helen Grzyb</h3>
 
             <p>Accredited by government agencies as an policy and research advisor and engagement expert in Western Australia, Dr Helen Grzyb is a Fellow of the Australian Institute of Company Directors (and a graduate of the Company Director course), of the Australian Institute of Management, and of the Australian Human Resources Institute.</p>
-            <p>Winner of the Australian Institute of Management (WA) award for best masters student and the Bankwest scholarship for Advanced not for profit governance, Helen is an accomplished researcher and strategist with over 30 years' national track record in both government and not-profit sectors.As the founding director of Helen Grzyb and Associates, she has assisted local and national organisations in devising answers to complex policy and governance questions in their pursuit of improving outcomes.The biggest impact of her work has been successfully achieving stakeholder buy-in in significant projects.</p>
+
+            <p>Winner of the Australian Institute of Management (WA) award for best masters student and the Bankwest scholarship for Advanced not for profit governance, Helen is an accomplished researcher and strategist with over 30 years&#39; national track record in both government and not-profit sectors.As the founding director of Helen Grzyb and Associates, she has assisted local and national organisations in devising answers to complex policy and governance questions in their pursuit of improving outcomes.The biggest impact of her work has been successfully achieving stakeholder buy-in in significant projects.</p>
+
             <p>Prior to leading her independent consultancy business, Dr Grzyb was a senior government officer at the centre of the Western Australian government, advising on environmental, aboriginal affairs, disability services as well as treasury and public sector management.</p>
+
             <p>Helen has lectured extensively on undergraduate, postgraduate and executive courses in Australia, and her expertise has been recognised with invitations to present to senior staff in South East Asia, at national conferences and to national and Western Australian organisations.</p>
 
-            <h6>Community and pro-bono involvement</h6>
+            <h3>Community and pro-bono involvement</h3>
 
-            <p>A strong advocate for education and economic empowerment, Dr Grzyb follows through on this by mentoring new professionals. She talks to graduates about business set up, entrepreneurship, and consultancy practice; has served as a mentor for the Australian Human Resources Institute and Curtin's NEXT STEP mentoring program. She currrently mentors public servants through the Institute of Public Administration Australia (WA).</p>
-            <p>Her expertise in governance and in vocational education in regional WA saw her appointed as Governing Councillor, South Regional TAFE in 2019. A volunteer for almonst 30 years, Helen has served on the boards of incorporated organisations: Advocare, Rosewood Care Group, The Aged Persons Support Service, Disability in the Arts, Disadvantage in the Arts, Australia (WA), Rocky Bay, Eastern Regional Business Enterprise and Arts Centre, Quadriplegic Centre, Meerilinga Incorporated and Presbyterian Ladies' College. Helen's substantial expertise in this area saw her appointment to the Western Australian Charitable Institutions Advisory Committee, a role she has held for since 2012.</p>
-            <p>Helen's pro-bono work with professional and business organisations including the City of Subiaco Economic and Sustainable Business committee, the Chamber of Commerce and Industry WA's Small and Medium Enterprise Council, and the Small Enterprise Association of Australia and New Zealand (WA).</p>
+            <p>A strong advocate for education and economic empowerment, Dr Grzyb follows through on this by mentoring new professionals. She talks to graduates about business set up, entrepreneurship, and consultancy practice; has served as a mentor for the Australian Human Resources Institute and Curtin&#39;s NEXT STEP mentoring program. She currrently mentors public servants through the Institute of Public Administration Australia (WA).</p>
 
-          </div>
+            <p>Her expertise in governance and in vocational education in regional WA saw her appointed as Governing Councillor, South Regional TAFE in 2019. A volunteer for almonst 30 years, Helen has served on the boards of incorporated organisations: Advocare, Rosewood Care Group, The Aged Persons Support Service, Disability in the Arts, Disadvantage in the Arts, Australia (WA), Rocky Bay, Eastern Regional Business Enterprise and Arts Centre, Quadriplegic Centre, Meerilinga Incorporated and Presbyterian Ladies&#39; College. Helen&#39;s substantial expertise in this area saw her appointment to the Western Australian Charitable Institutions Advisory Committee, a role she has held for since 2012.</p>
+
+            <p>Helen&#39;s pro-bono work with professional and business organisations including the City of Subiaco Economic and Sustainable Business committee, the Chamber of Commerce and Industry WA&#39;s Small and Medium Enterprise Council, and the Small Enterprise Association of Australia and New Zealand (WA).</p>
+            </div>
 
 
       </main> 
-     <div class="jumbotron" id="contact">
+     <div class="jumbotron cushycms" id="contact">
                   <h2>Ready to get in touch?</h2><br>
                   <a href="contact.html" class="btn btn-primary">Drop us a line</a>
       </div>
@@ -89,9 +92,13 @@
     </body>
 
     <footer>
-        <ul class="list-inline">
-          <li class="list-inline-item"><a href="https://www.linkedin.com/in/helengrzyb/"><i class="fab fa-linkedin"></i></a></li>
-          <li class="list-inline-item"><a href="https://www.facebook.com/Helen-Grzyb-and-Associates-106455867726934/"><i class="fab fa-facebook"></i></a></li>
-        </ul>
+            <div class="d-flex cushycms">
+              <div class="mr-auto p-2 bd-highlight">
+                <li class="list-inline-item"><a href="https://www.linkedin.com/in/helengrzyb/"><i class="fab fa-linkedin"></i></a></li>
+                <li class="list-inline-item"><a href="https://www.facebook.com/Helen-Grzyb-and-Associates-106455867726934/"><i class="fab fa-facebook"></i></a></li>
+              </div>
+              <div class="p-2 bd-highlight">contact@helengrzyb.com.au</div>
+              <div class="ml-auto p-2 bd-highlight">Developed by Robert Paul</div>
+            </div>
     </footer>
 </html>
