--- a/previous-clients.html
+++ b/previous-clients.html
@@ -13,7 +13,7 @@
 </head>
 
 <header>
-    <a href="index.html"> <img id="logo" src="logo.png"></a>
+    <a href="index.html"> <img class="img-fluid" id="logo" src="logo.png"></a>
 </header>
 
 <body>
@@ -183,20 +183,24 @@
             </div>
 
     </main>
-       <div class="jumbotron" id="contact">
-                  <h2>Ready to get in touch?</h2><br>
-                  <a href="contact.html" class="btn btn-primary">Drop us a line</a>
-  </div>
+       <div class="jumbotron cushycms" id="contact">
+          <h2>Ready to get in touch?</h2><br>
+          <a href="contact.html" class="btn btn-primary">Drop us a line</a>
+      </div>
 
    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
   </body>
-  <footer>
-    <ul class="list-inline">
-      <li class="list-inline-item"><a href="https://www.linkedin.com/in/helengrzyb/"><i class="fab fa-linkedin"></i></a></li>
-      <li class="list-inline-item"><a href="https://www.facebook.com/Helen-Grzyb-and-Associates-106455867726934/"><i class="fab fa-facebook"></i></a></li>
-    </ul>
-  </footer>
+   <footer>
+          <div class="d-flex cushycms">
+            <div class="mr-auto p-2 bd-highlight">
+              <li class="list-inline-item"><a href="https://www.linkedin.com/in/helengrzyb/"><i class="fab fa-linkedin"></i></a></li>
+              <li class="list-inline-item"><a href="https://www.facebook.com/Helen-Grzyb-and-Associates-106455867726934/"><i class="fab fa-facebook"></i></a></li>
+            </div>
+            <div class="p-2 bd-highlight">contact@helengrzyb.com.au</div>
+            <div class="ml-auto p-2 bd-highlight">Developed by Robert Paul</div>
+          </div>
+      </footer>
 </html>
