removed cushycms from footer

--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
     </body>
 
     <footer>
-            <div class="d-flex cushycms">
+            <div class="d-flex">
               <div class="mr-auto p-2 bd-highlight">
                 <li class="list-inline-item"><a href="https://www.linkedin.com/in/helengrzyb/"><i class="fab fa-linkedin"></i></a></li>
                 <li class="list-inline-item"><a href="https://www.facebook.com/Helen-Grzyb-and-Associates-106455867726934/"><i class="fab fa-facebook"></i></a></li>
