--- a/index.html
+++ b/index.html
@@ -12,13 +12,10 @@
     <meta name="google-site-verification" content="wpJhZ22qKAdN4Yge35cSDtZ4FLtKsXFSBehh2rjQYcA" />
 </head>
 
-<header>
-    <a href="index.html"> <img class="img-fluid" id="logo" src="logo.png"></a>
-</header>
-
 <body>
 
-    <nav class="navbar sticky-top navbar-expand-sm navbar-dark bg-dark">
+    <nav class="navbar fixed-top navbar-expand-sm navbar-light bg-light" style= "background-color: #3f535d;"> 
+      <img class="navbar-brand w-25 p-3" src="logo.png">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -73,7 +70,7 @@
         <div class="col-xs-12 col-sm-6 col-md-3 col-xl-2">
         <div class="card green-top"><img alt="website icon" src="./img/target-1.svg" width="100">
         <h2>Research and policy review</h2>
-        <p>Helen can conduct independent reviews and evaluations of policies/programs.</p>
+        <p>We can conduct independent reviews and evaluations of policies/programs.</p>
         </div>
         </div>
 
@@ -86,7 +83,7 @@
 
         <div class="col-xs-12 col-sm-6 col-md-3 col-xl-2">  
         <div class="card green-top"><img alt="speech bubbles" src="./img/teamwork-4.svg" width="100">
-        <h2>Stakeholder engagement</h2>
+        <h2>Engagement</h2>
         <p>With recognised expertise in stakeholder engagement throughout WA, we also provide engagement reviews to identify improvements in this key organisational process. </p>
         </div>
         </div>
