--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400&family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet">
      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
     <meta name="google-site-verification" content="wpJhZ22qKAdN4Yge35cSDtZ4FLtKsXFSBehh2rjQYcA" />
 </head>
 
 <body>
 
-    <nav class="navbar fixed-top navbar-expand-sm navbar-light bg-light" style= "background-color: #3f535d;"> 
+    <nav class="navbar sticky-top navbar-expand-sm navbar-dark" style= "background-color: #3f535d;"> 
       <img class="navbar-brand w-25 p-3" src="logo.png">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
