--- a/expertise.html
+++ b/expertise.html
@@ -5,33 +5,26 @@
      <title>Helen Grzyb & Associates</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400&family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet">
      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
     <meta name="google-site-verification" content="wpJhZ22qKAdN4Yge35cSDtZ4FLtKsXFSBehh2rjQYcA" />
 </head>
 
-<header>
-    <a href="index.html"> <img class="img-fluid" id="logo" src="logo.png"></a>
-</header>
-
 <body>
-            
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
-
-       <nav class="navbar sticky-top navbar-expand-sm navbar-dark bg-dark">
+     <nav class="navbar sticky-top navbar-expand-sm navbar-dark" style= "background-color: #3f535d;"> 
+      <img class="navbar-brand w-25 p-3" src="logo.png">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
-           <li class="nav-item active">
+           <li class="nav-item">
             <a class="nav-link" href="expertise.html">Expertise</a>
           </li>
 
@@ -50,33 +43,34 @@
             <a class="nav-link" href="index.html#news">News</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-link" href="contact.html ">Contact</a>
           </li>
               </ul>
           <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link" href="mailto:contact@helengrzyb.com.au"><i class="far fa-envelope"></i></li></a>
           <li class="nav-item"><a class= "nav-link" href="tel:0411722613‬"><i class="fas fa-phone"></i></a></li>
         </ul>
-     
-      </div>
+       </div>
     </nav>
-    <main>
-         <h5><strong>Strategic plans</strong></h5>
 
-<p>We have delivered&nbsp;strategic plans such as for:</p>
+  <main>
+    <div class="container-fluid">
+     <h5><strong>Strategic plans</strong></h5>
 
-<ul>
-  <li>Community and children&#39;s services</li>
-  <li>Local government</li>
-  <li>Heritage planning</li>
-  <li>WA public sector management</li>
-  <li>Aged care (community and residential)</li>
-  <li>WA public sector operations (Justice, Health, Education)</li>
-</ul>
-</div>
+      <p>We have delivered&nbsp;strategic plans such as for:</p>
+
+      <ul>
+        <li>Community and children&#39;s services</li>
+        <li>Local government</li>
+        <li>Heritage planning</li>
+        <li>WA public sector management</li>
+        <li>Aged care (community and residential)</li>
+        <li>WA public sector operations (Justice, Health, Education)</li>
+      </ul>
+    </div>
         <br>
 
-        <div class="cushycms"><h5><strong>Research and evaluations</strong></h5>
+        <div class="cushycms container-fluid"><h5><strong>Research and evaluations</strong></h5>
 
           <p>We work with expert colleagues to collectively provide a complete suite of research and analysis services including statistical analysis, stakeholder analysis and engagement, legislative/policy analysis, or national/international benchmark comparisons.</p>
 
@@ -102,7 +96,7 @@
           <p>Dr Helen Grzyb&#39;s unique expertise is recognised with her appointment as post-graduate lecturer in stakeholder engagement, and appointments delivering workshops on public sector ethics, influencing skills, and stakeholder engagement.</p>
           </div>
                   <br>
-        <div class="cushycms" id="strategic-plans"><h5><strong>Governance advisory</strong></h5>
+        <div class="cushycms container-fluid"><h5><strong>Governance advisory</strong></h5>
 
           <p>We work with boards to optimise policies for the future, identify board skills and capacity requirements, manage risk, build sustainable plans and organisations. Dr Helen Grzyb is a Fellow of the Australian Institute of Company Directors. With over 30 years&#39; experience as a community or state government board member she is perfectly positioned to offer governance advisory services. Her experience in governance includes:</p>
 
@@ -117,7 +111,7 @@
           </ul>
           </div>
                   <br>    
-                  <div class="cushycms" id="exec-coaching"><h5><strong>Executive coaching</strong></h5>
+                  <div class="cushycms container-fluid"><h5><strong>Executive coaching</strong></h5>
 
           <p>As executive coach, Helen has a very effective approach in gaining people&#39;s trust, teasing out barriers to adoption of change and new approaches. She&nbsp;is experienced in coaching people from government or not for profit organisations.<br />
           <br />
@@ -126,7 +120,7 @@
 
 
     </main>
-       <div class="jumbotron cushycms" id="contact">
+       <div class="jumbotron cushycms">
                   <h2>Ready to get in touch?</h2><br>
                   <a href="contact.html" class="btn btn-primary">Drop us a line</a>
   </div>
