--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
                 </div>
       </div>
     </main>  
-      <div class="jumbotron cushycms" id="contact">
-                  <h2>Ready to get in touch?</h2><br>
-                  <a href="contact.html" class="btn btn-primary">Drop us a line</a>
+      <div id="contact" class="jumbotron cushycms">
+          <h2>Ready to get in touch?</h2><br>
+          <a href="contact.html" class="btn btn-primary">Drop us a line</a>
 
       </div>
 
@@ -146,7 +146,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
-</body>
+  </body>
 
       <footer>
           <div class="d-flex">
