--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <body>
 
+  <!-- Navigation -->
     <nav class="navbar sticky-top navbar-expand-sm navbar-dark" style= "background-color: #3f535d;"> 
       <img class="navbar-brand w-25 p-3" src="logo.png">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,18 +29,15 @@
            <li class="nav-item">
             <a class="nav-link" href="expertise.html">Expertise</a>
           </li>
-
           <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
           </li>
             <li class="nav-item">
             <a class="nav-link" href="case-studies.html">Case studies</a>
           </li>
-           </li>
-            <li class="nav-item">
+          <li class="nav-item">
             <a class="nav-link" href="previous-clients.html">Previous clients</a>
           </li>
-
           <li class="nav-item">
             <a class="nav-link" href="index.html#news">News</a>
           </li>
@@ -50,16 +48,23 @@
           <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link" href="mailto:contact@helengrzyb.com.au"><i class="far fa-envelope"></i></li></a>
           <li class="nav-item"><a class= "nav-link" href="tel:0411722613‬"><i class="fas fa-phone"></i></a></li>
-        </ul>
-     
+        </ul> 
       </div>
     </nav>
+  <!-- /Navigation -->
+
+  <!-- Jumbotron -->
+
+    <div class="jumbotron cushycms">
+          <p class="lead">Helen Grzyb and Associates is a unique consultancy offering sustainable solutions to community and government organisations since 1997.</p>
+          <a href="contact.html" class="btn btn-primary">Drop us a line</a>
+    </div>
+
+  <!-- /Jumbotron -->
 
     <main>
       <div class="container-fluid">
         <div class="cushycms">
-          <p class="lead">Helen Grzyb and Associates is a unique consultancy offering sustainable solutions to community and government organisations since 1997.</p>
-
           <h5><strong>Solutions</strong></h5>
           <p>Helen Grzyb and Associates works with government and not for profit organisations to achieve the best possible value in an environment of change.</p>
           <p>We are perfectly positioned to work with you to plan and develop the strategies for contemporary service delivery.</p>
@@ -136,12 +141,7 @@
                 </div>
       </div>
     </main>  
-      <div id="contact" class="jumbotron cushycms">
-          <h2>Ready to get in touch?</h2><br>
-          <a href="contact.html" class="btn btn-primary">Drop us a line</a>
-
-      </div>
-
+  
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
